- pngwolf-zopli 1.1.0 - https://github.com/jibsen/pngwolf-zopfli
- rehuff - http://wiki.xiph.org/Rehuff
- Tidy 5.1.14 - http://tidy.sourceforge.net
- TruePNG 0.6.2.2 - http://x128.ho.ua/pngutils.html
- UPX 3.91 - http://upx.sourceforge.net
- ZLib 1.2.8 - http://www.zlib.net
- zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress


X.XX - YYYY/MM/DD
- Updated to ECT 0.6.2.0 -ef70e0- x86 and x64 optimized builds (thanks Malloc Voidstar).
- Reverted multiple instances detection (Special).
- Made abort optimization message more clearer (Louis Horvath).
- Changed from pngwolf to pngwolf-zopfli, which gives higher rations, and a native x64 build (TPS).
- Updated to cppcheck 1.75.


8.50 - 2016/08/01
- Made interface fully HDPI aware. Now it reescales according to Windows scaling (@Zeyckler).
- Added smpdf to the PDF toolchain (necros, maadjordan).
- Added OLE and OBJ files detection by content.
- Added optional GIF lossy recompression by adding Gifsicle Lossy (thanks to jibz for the binaries).
- Added INI setting GIFAllowLossy=false to enable lossy GIF optimizations (maadjordan).
- Added ECT multithreading support to make it faster with more than one core/CPU, and improve ratio with --allfilters.
- Improved UPX compresion adding --nrv2d --crp-ms=999999.
- Improved ECT compression.
- Switched jpeg-recompress method to SmallFry due to better compression ratios than SSIM, at least until it is patented.
- Replaced tidy-html5 4.9.26-191-gb4efe74 with official Tidy 5.1.14 to avoid errors on old Windows versions (maadjordan).
- Added Flash (.fla) format and enhance extension lists to the OLE tool chain (maadjordan).
- Added Revit FAmily file extensions (.rft, .rfa, .rte) to the OLE tool chain (maadjordan).
- Added more OLE extensions from http://www.filesignatures.net: .ac .adp .apr .db .opt .msc .mtw .wps .spo .sou .xla (maadjordan).